<resources>
    <string name="app_name">Movie App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cari">Cari</string>
    <string name="nama_kota">Title</string>
    <string name="temperatur">Overview</string>
    <string name="deskripsi">Descripsi</string>

    <string name="add_favr">Added to Favorites</string>
    <string name="remove_favr">Removed from Favorites</string>
    <string name="no_favorites_items">No Favorites</string>
    <string name="no_favorites_msg">Long press on item to add to favorites.</string>
    <string name="favorites_remove_msg">Long press on item to remove from favorites.</string>
    <string name="favorites">Favorite</string>
    <string name="releaseDate">Release</string>
    <string name="Description">Desc</string>
    <string name="content_title">Dicoding Movie</string>
    <string name="content_text">Update Movie</string>
    <string name="subtext">Dont forget there are many top movie this year</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="overview">Description</string>
    <string name="title">title</string>
    <string name="dicoding">Dicoding</string>
    <string name="language">Language</string>
    <string name="original_title">original_title</string>
    <string name="original_language">language</string>
    <string name="fav">Add Favorite</string>
    <string name="one_time_alarm">Create Daily Reminder</string>
    <string name="tanggal_alarm">Date</string>
    <string name="waktu_alarm">Time</string>
    <string name="pesan_alarm">Daily Reminder</string>
    <string name="set_one_time_alarm">Submit</string>
    <string name="repeating_alarm">Daily Reminder</string>
    <string name="set_repeating_alarm">Repeat</string>
    <string name="batalkan_alarm">Cancel</string>


    <string name="empty_text">NO DATA</string>
    <string name="DicodingMovie">Dicoding Movie</string>

</resources>
