<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgDetail"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textkota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_kota" />

        <TextView
            android:id="@+id/texttemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperatur" />

        <TextView
            android:id="@+id/textDesc"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginRight="16dp"
            android:text="@string/deskripsi" />
    </LinearLayout>
</LinearLayout>