<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgFavo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        tools:src="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_toRightOf="@id/imgFavo"
        android:layout_toEndOf="@id/imgFavo"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <TextView
            style="@style/TextAppearance.AppCompat"
            android:id="@+id/texttitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_kota" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
            android:id="@+id/textRelease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/releaseDate" />

        <TextView
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/textOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperatur" />


        <TextView
            android:id="@+id/textOT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi" />

        <TextView
            android:id="@+id/textOL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi" />

        <ImageView
            android:id="@+id/imgBackdrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>